added event listeners for answers

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
                 <button data-correct="" class="btn" id="Answer2">Answer 2</button>
                 <button data-correct="" class="btn" id="Answer3">Answer 3</button>
                 <button data-correct="" class="btn" id="Answer4">Answer 4</button>
-                <p id="right-or-wrong"></p>
-            </div>
 
+            </div>
+            <div id="right-or-wrong">
+            </div>
         </div>
         <div class="controls">
             <button id="start-btn" class="start-btn btn">Start</button>
