timer is working, high scores is not working

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <button id="start-btn" class="start-btn btn">Start</button>
         </div>
         <div id="score" class="hide">
-            <P id="high-scores"></P>
+            <P id="results"></P>
             <input type="text" name="" id="initials">
-            <button id="submit" onclick="saveUser()">Save User Initials</button>
+            <button class="btn" id="submit" onclick="saveUser()">Save User Initials</button>
         </div>
     </div>
     <script src="script.js"></script>
