time to refactor

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <div id="score" class="hide">
             <P id="results"></P>
             <input type="text" name="" id="initials">
-            <button class="btn" id="submit" onclick="saveUser()">Save User Initials</button>
+            <button class="btn" id="submit">Save User Initials</button>
+            <p id=high-score></p>
         </div>
     </div>
     <script src="script.js"></script>
