--- a/index.html
+++ b/index.html
@@ -27,17 +27,16 @@
                 <button data-correct="" class="btn" id="Answer4">Answer 4</button>
 
             </div>
-            <div id="right-or-wrong">
-            </div>
         </div>
         <div class="controls">
             <button id="start-btn" class="start-btn btn">Start</button>
         </div>
         <div id="score" class="hide">
             <P id="results"></P>
-            <input type="text" name="" id="initials">
+            <!-- <input type="text" name="" id="initials">
             <button class="btn" id="submit">Save User Initials</button>
-            <p id=high-score></p>
+            <p id="high-score">Previous High Score: </p> -->
+            <label for="high-score">Previous High Score: <span id="high-score"></span></label>
         </div>
     </div>
     <script src="script.js"></script>
