--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <div class="container">
         <h1>JavaScript Quiz</h1>
         <p id="instructions">Try to answer the following JS code-related questions within the time limit. Keep in mind
-            that
-            incorrect answers will penalize your score/time by ten seconds!</p>
+            that incorrect answers will penalize your score/time by ten seconds! </p>
         <div class="timer">
             <label for="timer">Timer: <span id="timer"></span> seconds</label>
         </div>
@@ -33,9 +32,6 @@
         </div>
         <div id="score" class="hide">
             <P id="results"></P>
-            <!-- <input type="text" name="" id="initials">
-            <button class="btn" id="submit">Save User Initials</button>
-            <p id="high-score">Previous High Score: </p> -->
             <label for="high-score">Previous High Score: <span id="high-score"></span></label>
         </div>
     </div>
