--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p id="instructions">Try to answer the following JS code-related questions within the time limit. Keep in mind
             that incorrect answers will penalize your score/time by ten seconds! </p>
         <div class="timer">
-            <label for="timer">Timer: <span id="timer"></span> seconds</label>
+            <p>Timer: <span id="timer"></span> seconds</p>
         </div>
         <div id="question-container" class="hide">
             <div id="question">Question</div>
@@ -31,8 +31,8 @@
             <button id="start-btn" class="start-btn btn">Start</button>
         </div>
         <div id="score" class="hide">
-            <P id="results"></P>
-            <label for="high-score">Previous High Score: <span id="high-score"></span></label>
+            <p id="results"></p>
+            <p>Previous High Score: <span id="high-score"></span></p>
         </div>
     </div>
     <script src="script.js"></script>
